styling: height of birdlist elements with variables, no longer overflows

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,12 +1,12 @@
-#app{
+#app {
   min-height: 100vh;
   max-height: 100vh;
-  border: 5px solid pink;
+  // border: 5px solid pink;
   box-sizing: border-box;
   // overflow-y:hidden;
 }
 html,
 body {
-   margin: 0;
-   padding: 0;
+  margin: 0;
+  padding: 0;
 }
