--- a/src/styles/BirdList.scss
+++ b/src/styles/BirdList.scss
@@ -1,19 +1,27 @@
+@import './variables';
+
+$BirdList-height: calc(99vh - $navbar-height - $page-title-height);
+$content-container-height: calc($BirdList-height - 150px);
+
 .BirdList {
-  max-height: 100%;
+  height: $BirdList-height;
   background-color: white;
   padding-left: 10px;
   box-sizing: border-box;
+  // border: 5px solid blue;
   h2{
     margin: 0;
   }
   .title-container {
-    height: 50px;
+    height: 70px;
     width: 50vw;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   .content-container {
     width: 50vw;
+    max-height: $content-container-height;
     .search-container{
       background-color: rgb(236, 236, 236);
       padding: 10px 20px;
@@ -25,7 +33,7 @@
       }
     }
     .list-container {
-      height: 80vh;
+      height: $content-container-height;
       border-radius: 0px 0px 10px 10px;
       background-color: rgb(236, 236, 236);
       padding: 10px;
