--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,6 +1,8 @@
+@import './variables';
+
 .Navbar {
   width: 100%;
-  height: 50px;
+  height: $navbar-height;
   background-color: lightseagreen;
   display: flex;
   align-items: center;
