--- a/src/styles/PageTitle.scss
+++ b/src/styles/PageTitle.scss
@@ -1,10 +1,11 @@
+@import './variables';
+
 .PageTitle {
   width: 100%;
-  height: 15vh;
+  height: $page-title-height;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
   div {
     background-image: url('https://images.pexels.com/photos/55832/flock-of-birds-canada-geese-geese-wing-55832.jpeg');
     background-position: 0 center;
